# cfgbot

./: README.md  pyproject.toml
.github/workflows/: post.yml  render-ghidra.yml
src/cfgbot/: cfgbot.py  collector.py  github.py  image.py  index.py  message.py
src/cfgbot/color-schemes/: dark.json  green-fuschsia.json  light.json
src/cfgbot/indices/: TypeScript.json  cpython_python.json  go_runtime_go_net.json  python.json
tests/: message_test.py
